--- a/src/manifest.json
+++ b/src/manifest.json
@@ -11,7 +11,7 @@
     "persistent": false
   },
   "browser_action": {
-    "default_title": "Make this page red"
+    "default_title": "Click to start, esc to exit"
   },
   "web_accessible_resources": [
     "images/hruler.png",
